--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -2,7 +2,7 @@
 % ==========================================================
 
 \chapter{Генерация и эволюция убегающих электронов в плазме токамаков и использование сцинтиляционных детекторов для их диагностики}
-\label{ch:ch1}
+\label{sec:stateOfArt}
 
 В настоящей главе описаны различные механизмы генерации убегающих электронов в плазме токамака; затем будут рассказано о том, какие факторы влияют на движение убегающих электронов, приводя к уменьшению набираемой ими энергии. Затем будут рассмотрены различные механизмы диагностики убегающих электронов. В конце будет подробно рассмотрено устройство сцинтилляционных детекторов, с помощью которых возможно регистрировать тормозное излучение убегающих электронов. 
 
@@ -426,19 +426,75 @@
 На рисунке~\ref{fig:scintillatorResponseExample} представлены функции отклика детекторов на основе различных материалов. 
 
 \begin{figure}[ht]
-  \centerfloat{ \includegraphics[width=0.50\linewidth]{scintillatorResponseExample} }
+  \centerfloat{ \includegraphics[width=0.47\linewidth]{scintillatorResponseExample} }
   \caption{ Фиттированные функции отклика детекторов BGO~(a), NaI(Tl)~(b) и LaBr3(Ce)~(c) на $\gamma$-кванты с энергией 2,6~МэВ. Обозначены компоненты функций отклика: 1 --- пик полного поглощения энергии, 2 --- пик одиночного вылета, 3 --- пик двойного вылета, 4 --- комптновоский край с одиночным вылетом, 5 — комптоновский край с двойным вылетом, 6 --- вклад внутреннего рассеяния, 7 --- вклад внешнего рассеяния, 8 --- функция полного отклика и 9 --- результаты моделирования.~\cite{Grozdanov2021}}
   \label{fig:scintillatorResponseExample}
 \end{figure}
+
+% ----------------------------------------------------------
+
+\subsection{Восстановление исходного спектра излучения по измеренному спектру}
+\label{sec:deconvolutionMlemMethod}
+
+Задача восстановления исходного распределения является весьма актуальной при обработке спектров и изображений в астрофизике~\cite{JungRichardt2016}, биологии и медицине~\cite{Vardi1985}, гамма и рентгеновской спектроскопии. Попытки восстановления исходного энергетического распределения из спектров, измеренных сцинтилляционными и полупроводниковыми детекторами, проводились ранее, например, в работах~\cite{Raad2008,Meng2000} и других.
+
+Измеренный с помощью гамма детектора спектр $s(\varepsilon)$ может быть представлен в следующем виде:
+\begin{equation}
+  \label{eq:BaseConvolution}
+  s(\varepsilon) = \int \limits_0^{+\infty} g( \varepsilon' ) h( \varepsilon, \varepsilon' ) d \varepsilon' + n(\varepsilon)
+\end{equation}
+где $g(\varepsilon)$ --- спектр гамма излучения от источника излучения, $n(\varepsilon)$ --- статистический пуассоновский шум, $ h( \varepsilon, \varepsilon' ) $ --- передаточная функция, $\varepsilon$ --- энергия. Задача восстановления заключается в нахождении спектра гамма излучения $g$ по измеренному спектру $s$ при известной функции $h$.~\cite{Meng2000,Khilkevitch2013}
+
+Для решения уравнения~\ref{eq:BaseConvolution} необходимо знать функцию $ h( \varepsilon, \varepsilon' ) $. Это --- передаточная функция, её физический смысл следующий: для моноэнергетического пучка гамма квантов с энергией $\varepsilon'$, испускаемый источником, на детекторе будет зарегистрирован спектр, равный $s(\varepsilon) = h(\varepsilon, \varepsilon') \cdot N_{\gamma}$ без учёта шума, где $N_{\gamma}$ --- количество гамма квантов, испущенных источником. Передаточная функция $h$ зависит от характеристик самого детектора (площади, материала, эффективности, относительного влияния на зарегистрированный спектр таких эффектов как комптоновское рассеяние, интенсивности пиков полного поглощения, одиночного и двойного вылета, и тому подобное), от процессов, произошедших с квантом после его испускания на пути к детектору (поглощение в конструкциях, размещённых на пути гамма кванта от источника к детектору, отражение от окружающих конструкций, и так далее), от распределения испускаемого излучения по углам и от геометрического расположения детектора относительно источника гамма квантов. Функция $h$ может быть измерена экспериментально, однако на практике проще получить её с помощью численного моделирования с помощью одного из кодов, например с помощью компьютерного кода MCNP (Monte Carlo N-Particle code) и программы MCAM (Monte Carlo Automatic Modeling Program for Radiation Transport Simulation)~\cite{Hendricks2004,Fischer2005,Wu2009,Forster2004}.
+
+Уравнение~\ref{eq:BaseConvolution} можно переписать в дискретной форме:
+\begin{equation}
+  \label{eq:BaseConvolutionMatrix}
+  s = H \cdot g + n 
+\end{equation}
+где $s$, $g$, $n$ --- вектора, $H$ --- матрица. Для выбранной дискретной сетке по энергиям размерностью $N$ в интервале $ \varepsilon_0 \ldots \varepsilon_N $ элементы векторов оказываются равными значениям
+\begin{equation*}
+  s_i = \int \limits_{\varepsilon_i}^{\varepsilon_{i+1}} s( \varepsilon' ) d \varepsilon'
+\end{equation*}
+Для простоты можно считать, что эта сетка одинаковая для измеренного спектра и исходного спектра гамма излучения, но в общем случае это может быть и не так
+
+Задачи определения неизвестного $x$ вида 
+\begin{equation*}
+  y = A x, x \in X, y \in Y
+\end{equation*}
+где $X$ и $Y$ --- некоторые пространства, $A$ --- оператор: $ A : X \rightarrow Y $, называются корректными по Адамару, если для каждого фиксированного $y$ решение $x$ существует, единственно и устойчиво. Под устойчивостью тут подразумевается то, что при малом изменении $y$ значение решения $x$ так же изменится мало~\cite{Liskovets1982}. Решение уравнения~\ref{eq:BaseConvolution} представляет собой некорректно поставленную по Адамару задачу, близкую к задаче деконволюции. Для решения подобного класса задач известен целый ряд методов, часть из которых могут быть применены и в задачах гамма-спектрометрии.
+
+
+Один из таких методов --- это метод ML-EM (Maximum-likelihood Fitting by Expectation Maximisation), так же называемый методом Ричардсона-Луси~\cite{Vardi1985,Richardson1972,Lucy1974}. Он может быть применён для решения уравнений вида \ref{eq:BaseConvolutionMatrix}.~\cite{Khilkevitch2013,Shevelev2013,Meng2000,Morhac2011} Это итеративный алгоритм, на каждой итерации следующее значение вычисляется как
+\begin{equation}
+  \label{eq:MlemBase}
+  g_i^{p+1} = g_i^p \cdot \sum \limits_{j = 0 }^{N} h_{j,i} \frac{ s_j }{ \sum \limits_{k=0}^{N} h_{j,k} g_k^p }
+\end{equation}
+где верхний индекс $p$ --- номер итерации. На каждом шаге алгоритма выполняется преобразование 
+\begin{equation*}
+  g_i^p = \max \left( g_i^p, 0 \right)
+\end{equation*}
+которое обеспечивает неотрицательность решения --- очевидно, что искомая интенсивность гамма излучения не может быть отрицательной.
+
+Если измеряемый спектр излучения, который образуется в результате ядерных реакций, представляет собой ряд дискретных линий, то базовый метод может быть модифицирован: на каждом шаге производится процедура ``вытягивания'' линий:
+\begin{equation}
+  \label{eq:BoostMlemDisturb}
+  g^{p, boost}_i = \left( g^p_i \right)^{\beta} \cdot \frac{ \sum_j g^p_i }{ \sum_j g^{p, boost}_j }
+\end{equation}
+где значение степени $\beta$ --- параметр алгоритма, он должен быть чуть больше 1.0. Эта модификация была предложена в~\cite{Morhac2011}.
+
+Помимо алгоритма ML-EM, существует и целый ряд других алгоритмов: MEM (Maximum Entropy Method)~\cite{Jaynes1988,Meng2000}, метод Голда~\cite{Gold1964}, метод MAP (Maximum a posteriori deconvolution algorithm)~\cite{Hunt1994}, Ван-Циттерта~\cite{VanCittert1931}, Тихонова-Миллера~\cite{Tikhonov1963}. Сравнения различных алгоритмов, приведённых в работах~\cite{Meng2000,Morhac2011,Panontin2021,Lanteri1999,Jeffrey1986,Bouchet1995} показали, что алгоритм ML-EM демонстрирует лучшие результаты при обработке спектров гамма-излучения, проявляет хорошую устойчивость к шумам на исходных данных.
 
 % ==========================================================
 
 \FloatBarrier
 \section{Выводы к главе 1}
 
-В настоящей главе рассмотрены механизмы возникновения убегающих электронов: прежде всего, это ускорение электронов в электрическом поле с переходом в режим убегания, затем --- лавинный эффект, при котором кулоновские столкновения первичных убегающих электронов приводят с обычными электронами плазмы приводят к переходу последних в режим убегания, а так же ряд прочих механизмов (радиоактивный распад трития, рассеяние гамма излучения на свободных электронах). Рассмотрены механизмы, ограничивающие энергию убегающих электронов: ограничение из-за конечного времени жизни электрона, синхротронное и тормозное излучение, дрейфовое смещение орбиты, взаимодействие с возмущениями магнитного поля, плазменные неустойчивости.
+В настоящей главе рассмотрены механизмы возникновения убегающих электронов: прежде всего, это ускорение электронов в электрическом поле с переходом в режим убегания, затем --- лавинный эффект, при котором кулоновские столкновения первичных убегающих электронов приводят с обычными электронами плазмы приводят к переходу последних в режим убегания, а так же ряд прочих механизмов (радиоактивный распад трития, рассеяние гамма излучения на свободных электронах). После перехода в режим убегания электрон, с одной стороны, ускоряется за счёт электрического поля, а с другой стороны, на него действуют различные механизмы, препятствующие бесконечному ускорению: синхротронное и тормозное излучение, дрейфовое смещение орбиты, взаимодействие с возмущениями магнитного поля, плазменные неустойчивости.
 
-Затем были рассмотрены методы диагностики убегающих электронов: по тормозному и синхротронному излучению, циклотронному излучению, инфракрасному излучению. Были рассмотрены принципы работы сцинтилляционных детекторов излучения, с помощью которых возможно регистрировать жёсткое рентгеновское излучение, генерируемое убегающими электронами.
+Были рассмотрены методы диагностики убегающих электронов: по тормозному и синхротронному излучению, циклотронному излучению, инфракрасному излучению. Были рассмотрены принципы работы сцинтилляционных детекторов излучения, с помощью которых возможно регистрировать жёсткое рентгеновское излучение, генерируемое убегающими электронами. Рассмотрены основные виды сцинтилляторов, которые используются при диагностике гамма и жёсткого рентгеновского излучения на токамаках.
+
+Спектр событий, зарегистрированный сцинтилляционным детектором излучения, не тождественен спектру квантов, которые были испущены источником излучения. Из-за ряда процессов (комптоновское рассеяние, рождение электрон-позитронных пар, конечное количество фотонов, родившихся при поглощении кванта) аппаратная функция детектора имеет сложный характер. С помощью ряда методов, таких как метод ML-EM, возможно провести восстановления исходного спектра излучения по измеренному детектором спектру зарегистрированных событий.
 
 % ----------------------------------------------------------
 
