--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -1455,6 +1455,71 @@
 }
 
 
+@article{Forster2004,
+  title = {MCNP™ Version 5},
+  journal = {Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms},
+  volume = {213},
+  pages = {82-86},
+  year = {2004},
+  note = {5th Topical Meeting on Industrial Radiation and Radioisotope Measurement Applications},
+  issn = {0168-583X},
+  doi = {https://doi.org/10.1016/S0168-583X(03)01538-6},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168583X03015386},
+  author = {R.Arthur Forster and Lawrence J Cox and Richard F Barrett and Thomas E Booth and Judith F Briesmeister and Forrest B Brown and Jeffrey S Bull and Gregg C Geisler and John T Goorley and Russell D Mosteller and Susan E Post and Richard E Prael and Elizabeth C Selcow and Avneet Sood},
+}
+
+@incollection{Jaynes1988,
+  title={How does the brain do plausible reasoning?},
+  author={Jaynes, Edwin Thompson},
+  booktitle={Maximum-entropy and Bayesian methods in science and engineering},
+  pages={1-24},
+  year={1988},
+  publisher={Springer}
+}
+
+@article{Hunt1994,
+  author = {Hunt, B.R.},
+  title = {Prospects for image restoration},
+  journal = {International Journal of Modern Physics C},
+  volume = {05},
+  number = {01},
+  pages = {151-178},
+  year = {1994},
+  doi = {10.1142/S0129183194000118},
+  URL = { https://doi.org/10.1142/S0129183194000118},
+  eprint = { https://doi.org/10.1142/S0129183194000118 }
+}
+
+@article{VanCittert1931,
+  author = {Van Cittert, P. H. },
+  title = {Zum Einfluß der Spaltbreite auf die Intensitätsverteilung in Spektrallinien. II},
+  journal = {Zeitschrift für Physik },
+  volume = {69},
+  pages = {298-308},
+  year = {1931},
+  doi = {10.1007/BF01391351},
+  URL = { https://link.springer.com/article/10.1007/BF01391351}
+}
+
+@report{Tikhonov1963,
+  author = { Тихонов, А. Н. },
+  title = {  О решении некорректно поставленных задач и методе регуляризации  },
+  journal = { Докл. АН СССР },
+  year = { 1963 },
+  volume = { 151 },
+  issue = {3},
+  pages = {501-504}
+}
+
+@article{Skrekel2021,
+  author = { Скрекель, О. М. and Бахарев, Н. Н. and Варфоломеев, В.И. and Гусев. В. К. and Ильясова, М. В. and Тельнова. А. Ю. and Хилькевич, Е. М. and Шевелев, А. Е. },
+  title = { Калибровка нейтронных счетчиков токамака Глобус-М2 },
+  journal = { Журнал технической физики },
+  year = { 2021 },
+  volume = { 92 },
+  issue = {1},
+  pages = {32-35}
+}
 
 %@ARTICLE{Article,
 %  author   = {Peter Adams},
