Исправлены некоторые проблемы с компиляцией на домашнем компьютере

--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -74,7 +74,7 @@
 
 \subsection{Лавинный эффект размножения убегающих электронов}
 
-При кулоновских столкновениях между <<быстрыми>> убегающими электронами и <<медленными>> электронами основной плазмы первые могут передавать вторым часть своей энергией, переводя их в режим убегания \cite{Sokolov1979}. Очевидно, для работы этого процесса требуется, чтобы время жизни убегающего электрона было больше времени между кулоновскими столкновениями. Темп генерации оказывается пропорциональным числу уже существующих в плазме убегающих электронов \cite{Rozansky2012}.  Хотя на пробные частицы в плазме в основном влияют столкновения с большими прицельными параметрами и малым переданным импульсом, в этом процессе большее значение имеет меньшее число близких столкновений, передающих больший импульс. Соответствующие близкие столкновения в этом случае --- это те, которые поднимают медленный электрон выше критической скорости для убегания. 
+При кулоновских столкновениях между ``быстрыми'' убегающими электронами и ``медленными'' электронами основной плазмы первые могут передавать вторым часть своей энергией, переводя их в режим убегания.~\cite{Sokolov1979} Очевидно, для работы этого процесса требуется, чтобы время жизни убегающего электрона было больше времени между кулоновскими столкновениями. Темп генерации оказывается пропорциональным числу уже существующих в плазме убегающих электронов \cite{Rozansky2012}.  Хотя на пробные частицы в плазме в основном влияют столкновения с большими прицельными параметрами и малым переданным импульсом, в этом процессе большее значение имеет меньшее число близких столкновений, передающих больший импульс. Соответствующие близкие столкновения в этом случае --- это те, которые поднимают медленный электрон выше критической скорости для убегания. 
 
 Импульс, передаваемый медленному электрону быстрым электроном, в основном перпендикулярен скорости $v_f$ быстрого электрона и определяется выражением
 \begin{equation*}
