--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,19 +1,19 @@
 
 {\actuality}
 
-Неотъемлемой особенностью токамака как системы удержания плазмы является то, что ограниченная плазма должна пропускать значительный ток, а соответствующая магнитная энергия больше, чем кинетическая энергия частиц, несущих ток. Объемные электроны являются носителями тока в термоядерной плазме при номинальных условиях, однако скорость электронного потока намного меньше, чем тепловые скорости электронов. Однако при некоторых условиях происходит так что небольшая популяция электронов с высокой надтепловой температурой становится значительным или даже доминирующим носителем тока. Основная причина такого явления заключается в том, что сила трения для быстрых электронов уменьшается с увеличением скорости. Электроны могут при этом претерпевать неограниченное ускорение электрическим полем; находящиеся в таком режиме электроны называют убегающими. Убегающие электроны (УЭ) долгое время были предметом пристального внимания в исследованиях плазмы как по академическим, так и по практическим причинам. Они могут вызывать пробой газа в сильных электрических полях, в том числе при атмосферных молниях, они могут присутствовать в событиях магнитного перезамыкания и могут генерироваться намеренно для создания пучков электронов высокой энергии. Многие аспекты физики электронного пучка и взаимодействия пучка с плазмой естественным образом относятся к поведению УЭ. Одним из таких аспектов является возбуждение волн быстрыми электронами либо в форме спонтанного нетеплового излучения, либо в виде вынужденного излучения, ведущего к электронным неустойчивостям \autocite{Breizman2019}.
+Неотъемлемой особенностью токамака как системы удержания плазмы является то, что ограниченная плазма должна пропускать значительный ток, а соответствующая магнитная энергия больше, чем кинетическая энергия частиц, несущих ток. Объемные электроны являются носителями тока в термоядерной плазме при номинальных условиях, однако скорость электронного потока намного меньше, чем тепловые скорости электронов. Однако при некоторых условиях происходит так что небольшая популяция электронов с высокой надтепловой температурой становится значительным или даже доминирующим носителем тока. Основная причина такого явления заключается в том, что сила трения для быстрых электронов уменьшается с увеличением скорости. Электроны могут при этом претерпевать неограниченное ускорение электрическим полем; находящиеся в таком режиме электроны называют убегающими. Убегающие электроны (УЭ) долгое время были предметом пристального внимания в исследованиях плазмы как по академическим, так и по практическим причинам. Они могут вызывать пробой газа в сильных электрических полях, в том числе при атмосферных молниях, они могут присутствовать в событиях магнитного перезамыкания и могут генерироваться намеренно для создания пучков электронов высокой энергии. Многие аспекты физики электронного пучка и взаимодействия пучка с плазмой естественным образом относятся к поведению УЭ. Одним из таких аспектов является возбуждение волн быстрыми электронами либо в форме спонтанного нетеплового излучения, либо в виде вынужденного излучения, ведущего к электронным неустойчивостям \cite{Breizman2019}.
 
-Столкновительные процессы для убегающих электронов играют намного меньшую роль, чем для основной массы электронов плазмы, поэтому их распределение по энергии существенно отличается от максвелловского. Ещё ранние теоретические исследования установили два механизма возникновения убегающих электронов: уход электронов из максвелловского хвоста в зону убегания и вторичные столкновения, которые увеличивают популяцию убегающих электронов в геометрической прогрессии. Убегающие электроны повсеместно присутствуют в плазме во время электрического пробоя газа в самом начале разряда, но их ток обычно остается относительно небольшим к тому времени, когда плазма нагревается и становится хорошим проводником, после чего они постепенно тк или иначе исчезают. Завершение разряда в штатных режимах работы обычно не вызывает повторного рождения убегающих электронов, однако если время отключения должно быть очень коротким в аварийной ситуации, то убегающие электроны во время гашения разряда становятся уже достаточно многочисленны (\autocite{Breizman2019}). На токамаке JET ток УЭ в процессе срыва может достигать значений 1~МА и выше и составлять 70\% и выше от полного тока по плазме \autocite{Smith2006}. На более крупных токамаках, таких как ИТЭР, следует ожидать ещё больших значений величины тока УЭ; так, согласно данным численного моделирования, величина тока УЭ на токамаке ИТЭР в некоторых сценариях может превышать 10~МА \autocite{Smith2006}. При этом пучок убегающих электронов может повреждать конструктивные элементы термоядерных реакторов (\autocite{Bazylev2011}, рисунок \cref{fig:electrons-wall}).
+Столкновительные процессы для убегающих электронов играют намного меньшую роль, чем для основной массы электронов плазмы, поэтому их распределение по энергии существенно отличается от максвелловского. Ещё ранние теоретические исследования установили два механизма возникновения убегающих электронов: уход электронов из максвелловского хвоста в зону убегания и вторичные столкновения, которые увеличивают популяцию убегающих электронов в геометрической прогрессии. Убегающие электроны повсеместно присутствуют в плазме во время электрического пробоя газа в самом начале разряда, но их ток обычно остается относительно небольшим к тому времени, когда плазма нагревается и становится хорошим проводником, после чего они постепенно тк или иначе исчезают. Завершение разряда в штатных режимах работы обычно не вызывает повторного рождения убегающих электронов, однако если время отключения должно быть очень коротким в аварийной ситуации, то убегающие электроны во время гашения разряда становятся уже достаточно многочисленны (\cite{Breizman2019}). На токамаке JET ток УЭ в процессе срыва может достигать значений 1~МА и выше и составлять 70\% и выше от полного тока по плазме \autocite{Smith2006}. На более крупных токамаках, таких как ИТЭР, следует ожидать ещё больших значений величины тока УЭ; так, согласно данным численного моделирования, величина тока УЭ на токамаке ИТЭР в некоторых сценариях может превышать 10~МА \cite{Smith2006}. При этом пучок убегающих электронов может повреждать конструктивные элементы термоядерных реакторов (\autocite{Bazylev2011}, рисунок \cref{fig:electrons-wall}).
 
 \begin{figure}[ht]
   \centerfloat{ \includegraphics[width=0.80\linewidth]{electrons-wall} }
-  \caption{ Повреждения внутренней стенки токамака JET пучком убегающих электронов (\autocite{Matthews2016}).}
+  \caption{ Повреждения внутренней стенки токамака JET пучком убегающих электронов (\cite{Matthews2016}).}
   \label{fig:electrons-wall}
 \end{figure}
 
-В более крупных токамаках, таких как ИТЭР, токи и энергии пучка убегающих электронов будут ещё выше. Так, согласно требованиям к диагностике убегающих электронов, возможные значения энергии составляют до 100~МэВ, а значения тока - до 70\% от полного тока по плазме \autocite{Donne2007}. 
+В более крупных токамаках, таких как ИТЭР, токи и энергии пучка убегающих электронов будут ещё выше. Так, согласно требованиям к диагностике убегающих электронов, возможные значения энергии составляют до 100~МэВ, а значения тока - до 70\% от полного тока по плазме \cite{Donne2007}. 
 
-Эмиссия тормозного излучения --- один из наиболее широко используемых диагностических инструментов для диагностики убегающих электронов в токамаках \autocite{Breizman2019,Knoepfel1979}. Замедляясь в веществе, убегающие электроны генерируют тормозное излучение, энергия которого приходится на диапазон от дисятков кэВ до десятков МэВ и выше \autocite{Shevelev2014}. Тормозное излучение от УЭ может быть объемным тормозным излучением <<тонкой мишени>>, когда УЭ рассеивается ионами плазмы, или тормозным излучением <<толстой мишени>>, когда УЭ сталкиваются с материалами камеры токамака, обращенными к плазме. Объемная эмиссия доминирует, когда УЭ хорошо удерживаются, тогда как поверхностное тормозное излучение преобладает во время быстрого выхода УЭ на внутреннюю поверхность токамака в связи с МГД неустойчивостями, или если линия обзора спектрометра пересекает лимитер, а так же в некоторых других случаях \autocite{Breizman2019}. 
+Эмиссия тормозного излучения --- один из наиболее широко используемых диагностических инструментов для диагностики убегающих электронов в токамаках \cite{Breizman2019,Knoepfel1979}. Замедляясь в веществе, убегающие электроны генерируют тормозное излучение, энергия которого приходится на диапазон от дисятков кэВ до десятков МэВ и выше \cite{Shevelev2014}. Тормозное излучение от УЭ может быть объемным тормозным излучением <<тонкой мишени>>, когда УЭ рассеивается ионами плазмы, или тормозным излучением <<толстой мишени>>, когда УЭ сталкиваются с материалами камеры токамака, обращенными к плазме. Объемная эмиссия доминирует, когда УЭ хорошо удерживаются, тогда как поверхностное тормозное излучение преобладает во время быстрого выхода УЭ на внутреннюю поверхность токамака в связи с МГД неустойчивостями, или если линия обзора спектрометра пересекает лимитер, а так же в некоторых других случаях \cite{Breizman2019}. 
 
 Тормозное излучение убегающих электронов может быть зарегистрированно с помощью сцинтилляционных детекторов, таких как NaI(Ti), BGO, LaBr3(Ce). От детекторов требуется регистрировать излучение в большом диапазоне энергий (от десятков-сотен кэВ и до дестятков МэВ), а так же с работать в том числе с высокой скоростью счёта (до $10^5$ -- $10^6$ c${}^-1$ и выше); дететоры должны работать в магнитных полях. На крупных токамаках, таких как ИТЭР, так же присутствуют и другие факторы: высокая температура и нейтронные поля в местах установки детекторов рентгеновского излучения. Зарегистрированный спектр рентгеновского излучения сложным образом зависит от функции распределения электронов, генерирующих излучение, от параметров конструктивных элементов, находящихся между источником излучения и детектором, а так же от аппаратной функции самого детектора. Таким образом, определение параметров пучка убегающих электронов и восстановление их функции распределения по энергии представляет собой непростую задау. 
 
