--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -1,282 +1,8 @@
-% ГОСТ Р 7.0.11-2011, Приложение Б, Книги
-%@BOOK{Sychev,
-%  author = {Сычёв, М. С.},
-%  title = {История Астраханского казачьего войска : учебное пособие},
-%  address = {Астрахань},
-%  publisher = {Волга},
-%  year = {2009},
-%  numpages = {231},
-%  language = {russian}
-%}
-%
-%@BOOK{Sokolov,
-%  author = {Соколов, А. Н. and Сердобинцев, К. С.},
-%  editor = {Бочарова, В. М.},
-%  address = {Астрахань},
-%  publisher = {Калиниградский ЮИ МВД России},
-%  title = {Гражданское общество: проблемы формирования и развития (философский и юридический аспекты) : монография},
-%  year = {2009},
-%  numpages = {218},
-%  language = {russian}
-%}
-%
-%@BOOK{Gaidaenko,
-%  author = {Гайдаенко, Т. А.},
-%  title = {Маркетинговое управление: принципы управленческих решений и российская практика},
-%  edition = {{}3-е изд, перераб. и доп.},
-%  address = {М.},
-%  publisher = {Эксмо: МИРБИС},
-%  year = {2008},
-%  numpages = {508},
-%  language = {russian}
-%}
-%
-%@BOOK{Lermontov,
-%  author = {Лермонтов, Михаил Юрьевич},
-%  title = {Собрание сочинений: в 4 т.},
-%  address = {М.},
-%  publisher = {Терра-Кн. клуб},
-%  year = {2009},
-%  note = {4 т.},
-%  language = {russian}
-%}
-%
-%@BOOK{Management,
-%  title = {Управление бизнесом : сборник статей},
-%  address = {Нижний новгород},
-%  publisher = {Изд-во Нижегородского университета},
-%  year = {2009},
-%  numpages = {243},
-%  language = {russian}
-%}
-%
-%@BOOK{Borozda,
-%  author = {Борозда, И. В. and Воронин, Н. И. and Бушманов, А. В.},
-%  title = {Лечение сочетанных повреждений таза},
-%  address = {Владивосток},
-%  publisher = {Дальнаука},
-%  year = {2009},
-%  numpages = {195},
-%  language = {russian}
-%}
-%
-%@BOOK{Marketing,
-%  author = {Михненков, О. В. and Коготкова, И. З. and Генкин, Е. В. and Сороко, Г. Я.},
-%  title = {Маркетинговые исследования в строительстве : учебное пособие для студентов специальности «Менеджмент организаций»},
-%  address = {М.},
-%  publisher = {Государственный университет управления},
-%  year = {2005},
-%  numpages = {59},
-%  language = {russian}
-%}
-%
-%% ГОСТ Р 7.0.11-2011, Приложение Б, Нормативные правовые акты
-%@BOOK{Constitution,
-%  title = {Конституция Российской Федерации : офиц. текст.},
-%  address = {М.},
-%  publisher = {Маркетинг},
-%  year = {2001},
-%  numpages = {39},
-%  language = {russian}
-%}
-%
-%@BOOK{FamilyCode,
-%  title = {Семейный кодекс Российской Федерации : [федер. закон: принят Гос. Думой 8 дек. 1995~г. : по состоянию на 3~янв. 2001~г.]},
-%  address = {СПб.},
-%  publisher = {Стаун-кантри},
-%  year = {2001},
-%  numpages = {94},
-%  language = {russian}
-%}
-%
-%% ГОСТ Р 7.0.11-2011, Приложение Б, Стандарты
-%@BOOK{Gost.7.0.53,
-%  title = {ГОСТ Р 7.0.53-2007 Система стандартов по информации, библиотечному и издательскому делу. Издания. Международный стандартный книжный номер. Использование и издательское оформление.},
-%  address = {М.},
-%  publisher = {Стандартинформ},
-%  year = {2007},
-%  numpages = {5},
-%  language = {russian}
-%}
-%
-%% ГОСТ Р 7.0.11-2011, Приложение Б, Депонированные научные работы
-%@BOOK{Razumovski,
-%  author = {Разумовский, В. А. and Андреев, Д. А.},
-%  title = {Управление маркетинговыми исследованиями в регионе},
-%  address = {М.},
-%  year = {2002},
-%  numpages = {210},
-%  note = {Деп. в ИНИОН Рос. акад. наук 15.02.02, № 139876},
-%  language = {russian}
-%}
-%
-%% ГОСТ Р 7.0.11-2011, Приложение Б, Диссертации
-%@BOOK{Lagkueva,
-%  author = {Лагкуева, Ирина Владимировна},
-%  title = {Особенности регулирования труда творческих работников театров : дис. ... канд. юрид. наук : 12.00.05},
-%  address = {М.},
-%  year = {2009},
-%  numpages = {168},
-%  language = {russian}
-%}
-%
-%@BOOK{Pokrovski,
-%  author = {Покровский, Андрей Владимирович},
-%  title = {Устранимые особенности решений эллиптических уравнений : дис. ... д-ра физ.-мат. наук : 01.01.01},
-%  address = {М.},
-%  year = {2008},
-%  numpages = {178},
-%  language = {russian}
-%}
-%
-%% ГОСТ Р 7.0.11-2011, Приложение Б, Авторефераты диссертаций
-%@BOOK{Sirotko,
-%  author = {Сиротко, Владимир Викторович},
-%  title = {Медико-социальные аспекты городского травматизма в современных условиях : автореф. дис. ... канд. мед. наук : 14.00.33},
-%  address = {М.},
-%  year = {2006},
-%  numpages = {26},
-%  language = {russian}
-%}
-%
-%% !!! этот пример НЕ работает с bibtex
-%% Тот же пример, с использованием https://www.ctan.org/pkg/biblatex-gost
-%@THESIS{Sirotko2,
-%  author =       {Сиротко, Владимир Викторович},
-%  title =        {Медико-социальные аспекты городского травматизма в современных условиях},
-%  media =        {text},
-%  type =         {phdautoref},
-%  science =      {мед. наук},
-%  specialitycode ={14.00.33},
-%  address =      {М.},
-%  year =         {2006},
-%  pagetotal =    {26},
-%  language =     {russian},
-%}
-%
-%@BOOK{Lukina,
-%  author = {Лукина, Валентина Александровна},
-%  title = {Творческая история «Записок охотника» И. С. Тургенева : автореф. дис. ... канд. филол. наук : 10.01.01},
-%  address = {СПб.},
-%  year = {2006},
-%  numpages = {26},
-%  language = {russian}
-%}
-%
-%% !!! этот пример НЕ работает с bibtex
-%% Тот же пример, с использованием https://www.ctan.org/pkg/biblatex-gost
-%@THESIS{Lukina2,
-%  author =       {Лукина, Валентина Александровна},
-%  title =        {Творческая история «Записок охотника» И. С. Тургенева},
-%  media =        {text},
-%  type =         {phdautoref},
-%  science =      {филол. наук},
-%  specialitycode ={10.01.01},
-%  address =      {СПб.},
-%  year =         {2006},
-%  pagetotal =    {26},
-%  language =     {russian},
-%}
-%
-%% ГОСТ Р 7.0.11-2011, Приложение Б, Отчёты о научно-исследовательской работе
-%@BOOK{Methodology,
-%  author = {Загорюев, А. Л.},
-%  title = {Методология и методы изучения военно-профессиональной направленности подростков : отчёт о НИР},
-%  address = {Екатеринбург},
-%  institution = {Уральский институт практической психологии},
-%  year = {2008},
-%  numpages = {102},
-%  language = {russian}
-%}
-%
-%% ГОСТ Р 7.0.11-2011, Приложение Б, Электронные ресурсы
-%@BOOK{Encyclopedia,
-%  title = {Художественная энциклопедия зарубежного классического искусства [Электронный ресурс]},
-%  address = {М.},
-%  publisher = {Большая Рос. энкцикл.},
-%  year = {1996},
-%  note = {1 электрон. опт. диск (CD-ROM)},
-%  language = {russian}
-%}
-%
-%% !!! этот пример НЕ работает с bibtex
-%% Тот же пример, с использованием https://www.ctan.org/pkg/biblatex-gost
-%@BOOK{Encyclopedia2,
-%  title = {Художественная энциклопедия зарубежного классического искусства},
-%  address = {М.},
-%  media = {eresource},
-%  publisher = {Большая Рос. энкцикл.},
-%  year = {1996},
-%  note = {1 электрон. опт. диск (CD-ROM)},
-%  language = {russian},
-%}
-%
-%@ARTICLE{Nasirova,
-%  author =       {Насырова, Г. А.},
-%  title =        {Модели государственного регулирования страховой деятельности
-%                  [Электронный ресурс]},
-%  journal =      {Вестник Финансовой академии},
-%  year =         {2003},
-%  number =       {4},
-%  note =         {Режим доступа: http://vestnik.fa.ru/4(28)2003/4.html},
-%  language =     {russian}
-%}
-%
-%@ARTICLE{Nasirova2,
-%  author = {Насырова, Г. А.},
-%  title = {Модели государственного регулирования страховой деятельности},
-%  journal = {Вестник Финансовой академии},
-%  year = {2003},
-%  media = {eresource},
-%  number = {4},
-%  note = {Режим доступа: http://vestnik.fa.ru/4(28)2003/4.html},
-%  language = {russian}
-%}
-%
-%% ГОСТ Р 7.0.11-2011, Приложение Б, Статьи
-%
-%@ARTICLE{Berestova,
-%  author = {Берестова, Т. Ф.},
-%  title = {Поисковые инструменты библиотеки},
-%  journal = {Библиография},
-%  year = {2006},
-%  number = {4},
-%  pages = {19},
-%  language = {russian}
-%}
-%
-%@ARTICLE{Kriger,
-%  author = {Кригер, И.},
-%  title =  {Бумага терпит},
-%  journal = {Новая газета},
-%  year = {2009},
-%  note = {1 июля},
-%  language = {russian}
-%}
-%
-
-% Examples from https://verbosus.com/bibtex-style-examples.html
-
-@ARTICLE{Breizman2019,
-  author = {{Breizman}, Boris N. and {Aleynikov}, Pavel and {Hollmann}, Eric M. and {Lehnen}, Michael},
-  title = "{Physics of runaway electrons in tokamaks}",
-  journal = {Nuclear Fusion},
-  keywords = {thermal quench, runaway avalanche, current quench, hot tail, disruption mitigation},
-  year = 2019,
-  month = aug,
-  volume = {59},
-  number = {8},
-  eid = {083001},
-  pages = {083001},
-  doi = {10.1088/1741-4326/ab1822},
-  adsurl = {https://ui.adsabs.harvard.edu/abs/2019NucFu..59h3001B},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
 
 @article{Matthews2016,
   doi = {10.1088/0031-8949/t167/1/014070},
   url = {https://doi.org/10.1088/0031-8949/t167/1/014070},
-  year = 2016,
+  year = {2016},
   month = {1},
   publisher = {{IOP} Publishing},
   volume = {T167},
@@ -286,9 +12,22 @@
   journal = {Physica Scripta}
 }
 
+@article{Breizman2019,
+  author = {{Breizman}, Boris N. and {Aleynikov}, Pavel and {Hollmann}, Eric M. and {Lehnen}, Michael},
+  title = {Physics of runaway electrons in tokamaks},
+  journal = {Nuclear Fusion},
+  year = {2019},
+  month = {8},
+  volume = {59},
+  number = {8},
+  pages = {083001},
+  doi = {10.1088/1741-4326/ab1822},
+  url = {https://ui.adsabs.harvard.edu/abs/2019NucFu..59h3001B}
+}
+
 @article{Smith2006,
   title={Runaway electrons and the evolution of the plasma current in tokamak disruptions},
-  author={H{\aa}kan Smith and Per Helander and Lars-Goran Eriksson and Dan Anderson and Mietek Lisak and F. Andersson},
+  author={Hakan Smith and Per Helander and Lars-Goran Eriksson and Dan Anderson and Mietek Lisak and F. Andersson},
   journal={Physics of Plasmas},
   year={2006},
   volume={13},
@@ -371,6 +110,7 @@
   pages={534–538}
 }
 
+
 @book{Wesson2004,
   title={Tokamaks},
   author={Wesson, J. and Campbell, D.J.},
@@ -382,17 +122,18 @@
   publisher={Clarendon Press}
 }
 
-@article{Sokolov1979, 
-  title={"Размножение" ускоренных электронов в токамаке}, 
+
+@article{Sokolov1979,
+  title={Размножение ускоренных электронов в токамаке}, 
   volume={29}, 
   number={4}, 
   journal={Письма в ЖЭТФ}, 
   author={Соколов, Ю. А.}, 
   year={1979}, 
-  pages={244–246}
+  pages={244-246}
 }
 
-@BOOK{Rozansky2012,
+@book{Rozansky2012,
   author = { Рожанский, В. А.},
   address = {Санкт-Петербург},
   publisher = {Лань},
@@ -764,7 +505,7 @@
   journal = {Measurement Science and Technology}
 }
 
-@ARTICLE{Jeffrey1986,
+@article{Jeffrey1986,
   author = {{Jeffrey}, W. and {Rosner}, R.},
   title = {On Strategies for Inverting Remote Sensing Data},
   journal = {Astrophysical Journal},
@@ -808,7 +549,7 @@
 }
 
 
-@ARTICLE{Lucy1974,
+@article{Lucy1974,
   author = {{Lucy}, L.~B.},
   title = {An iterative technique for the rectification of observed distributions},
   journal = {Astronomical Journal},
